<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LH</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rexercise">RExerciseActivity</string>
    <string name="title_activity_reports_home">ReportsHomeActivity</string>
    <string name="title_activity_workour_chart">WorkourChartActivity</string>
    <string name="title_activity_calories_chart">CaloriesChartActivity</string>
    <string name="title_activity_step_counter">StepCounterActivity</string>
    <string name="title_activity_food_details">FoodDetailsActivity</string>
    <string name="title_activity_record_food">RecordFoodActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="enter_age">Enter your age</string>
    <string name="enter_last">Enter last name</string>
    <string name="kgs">Enter weight in kgs</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="first">Enter first name</string>
    <string name="food_name">Food Name</string>
    <string name="choc_cake">Eg. Chocolate Cake</string>
    <string name="Calories">Calories</string>
    <string name="Date">Date</string>
    <string name="record">Record</string>
    <string name="barcode">Scan using Barcode</string>
    <string name="barcode1">Scan Barcode</string>
    <string name="scan">Scan</string>
    <string name="barcodeText">BarCode</string>
    <string name="add_new_food">Add New Food Item</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_workout_name">Add Workout Name</string>
    <string name="record_existing">Record Existing Food Item</string>

    <color name="l_blue">#ADD8E6</color>
    <color name="cyan_col">#00FFFF</color>
    <color name="dark_blue">#00FF00</color>
    <color name="orange_col">#FFA500</color>

    <!-- Activity_main -->
    <string name="rintake">Record Food Intake</string>
    <string name="rexercise">Record Exercise</string>
    <string name="vfood">View Food Database</string>
    <string name="vreports">View Reports/ Graphs</string>
    <string name="eprofile">Edit Profile</string>
    <string name="exit">Exit</string>

    <!-- Activity Reports Home -->
    <string name="view_calcons">View Calorie Consumption</string>
    <string name="view_exercises">View Workout Chart</string>
    <string name="view_steptracker">View Step Tracker</string>

    <!-- Record Exercise -->
    <string name="workout_type">Workout Type</string>
    <string name="caloriespermin">Calories (/min)</string>
    <string name="workout_duration">Workout Duration</string>
    <string name="total_cal_burnt">Total Calories Burnt</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="rec_workout">Record Workout</string>
    <string name="title_activity_add_food_item">AddFoodItem</string>
    <string name="title_activity_add_workout">AddWorkoutActivity</string>
    
    
    <string-array name="list_of_countries">
      <item >USA</item>
      <item >Uk</item>
      <item >Canada</item>
      <item >Australia</item>
      <item >France</item>
      <item >Italy</item>
      <item >China</item>
      <item >Japan</item>
      <item >Spain</item>
      </string-array>

</resources>