<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/cyan_col"
    tools:context="com.jsp.lh.AddFoodItem$PlaceholderFragment" >

       <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food_name" />

                    <EditText
                        android:id="@+id/foodText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" />

                    <ImageButton
                        android:id="@+id/speakButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onSpeak"
                        android:src="@android:drawable/ic_btn_speak_now" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/calText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Calories" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" >

                        <requestFocus />
                    </EditText>

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>

       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/scrollView1"
           android:layout_alignParentTop="true"
           android:layout_marginLeft="236dp"
           android:layout_marginTop="75dp"
           android:text="@string/add_new_food" />

       <Button
           android:id="@+id/button1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/scrollView1"
           android:layout_marginTop="69dp"
           android:onClick="recordEntry"
           android:text="@string/record" />

       <TextView
           android:id="@+id/barcodetext"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/scrollView1"
           android:layout_below="@+id/scrollView1"
           android:layout_marginTop="17dp"
           android:text="@string/barcodeText" />

       <EditText
           android:id="@+id/editText2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBaseline="@+id/barcodetext"
           android:layout_alignBottom="@+id/barcodetext"
           android:layout_marginLeft="14dp"
           android:layout_toRightOf="@+id/barcodetext"
           android:ems="10"
           android:inputType="number" />

       <Button
           android:id="@+id/barcodeButton"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/scrollView1"
           android:layout_marginLeft="15dp"
           android:layout_toRightOf="@+id/editText2"
           android:onClick="onScan"
           android:text="@string/barcode1" />
   
</RelativeLayout>
