<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/cyan_col"
    tools:context="com.jsp.lh.AddWorkoutActivity$PlaceholderFragment" >
    
    <ScrollView
        android:id="@+id/rexercise_sv1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/rexercise_ll_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workout_type" />

                    <EditText
                        android:id="@+id/input_workout_type1"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:hint="@string/add_workout_name"
                        android:inputType="textPersonName" >

                        <requestFocus android:layout_width="wrap_content" />
                    </EditText>

                    <ImageButton
                        android:id="@+id/speakButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onSpeak"
                        android:src="@android:drawable/presence_audio_online" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/calpermin_text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caloriespermin" />

                    <EditText
                        android:id="@+id/input_calpermin1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:inputType="number" />
                </TableRow>

                 

               
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/rec_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rexercise_sv1"
        android:layout_below="@+id/rexercise_sv1"
        android:layout_marginTop="53dp"
        android:gravity="center_horizontal"
        android:onClick="recordEntry"
        android:text="@string/add_workout" />

</RelativeLayout>
